# Network-Assignment-1

./: .gitignore  Makefile  README.md  compile_ui.ps1  env_setup.py  main.py  pyproject.toml  resources.qrc  resources_rc.py  sample_code.py
encryption/: __init__.py  handshake.py  primitives.py  session.py  transport.py
explanations/: 01_mvvm_chat_client_overview.md  02_repositories_and_viewmodels_contracts.md  03_screens_state_and_ui_consistency.md
specs/: encryption.md
src/: App.py  debug_di.py  main.py
src/components/: chat_panel.py
src/core/: __init__.py  serializable_message.py  types.py
src/di/: app_container.py  channel_container.py  chat_container.py  container.py  login_container.py  network_container.py  session_container.py  user_container.py
src/infrastructure/: chat_protocol.py  wireguard_session.py
src/main_app/: MainAppWindow.qml  RootWindow.qml  main_app_window.py  root_window.py
src/models/: __init__.py  message.py  transport_type.py  user.py
src/network_client/: chat_protocol.py
src/repositories/: channel_repository.py  chat_repository.py  session_repository.py  (+1 more)
tests/: test_extended.py  test_handshake.py  test_live.py  test_primitives.py
vulnerabilities/: VULNERABILITY_SPEC.md  findings.md  poc_01_channel_info_disclosure.py  poc_01_session_hijacking.py  poc_02_username_injection.py  poc_03_error_disclosure.py  poc_04_negative_handle.py  poc_04_username_reclaim.py  poc_05_duplicate_processing.py  poc_05_session_hijacking.py  poc_06_negative_offset.py  poc_06_user_enumeration.py  run_all_probes.py  vulnerabilities.md
(+123 files in other folders)
