[project]
name = "assignment"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
    "msgpack>=1.1.2",
    "pynacl>=1.6.2",
    "cryptography>=48.0.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "PySide6>=6.8",
    "requests>=2.34.0",
    "asyncslot>=0.3.1",
    "qasync>=0.28.0",
    "keyring>=25.7.0",
    "dependency-injector>=4.49.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
